<?xml version="1.0"?>
<package format="2">
  <name>rtr_choreonoid_models</name>
  <version>0.1.0</version>
  <description>
    Rogiken+/TNK-ROS robot models for choreonoid.
  </description>
  <maintainer email="groadpg@gmail.com">Ryodo Tanaka</maintainer>
  <license>MIT</license>
  <author email="groadpg@gmail.com">Ryodo Tanaka</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>choreonoid</depend>
  <exec_depend>choreonoid_ros_control</exec_depend>
  <exec_depend>choreonoid_ros_plugins</exec_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
