<?xml version="1.0"?>
<package format="2">
  <name>rtr_choreonoid_projects</name>
  <version>0.1.0</version>
  <description>
    Rogiken+/TNK-ROS project files
  </description>
  <maintainer email="groadpg@gmail.com">Ryodo Tanaka</maintainer>
  <license>MIT</license>
  <author email="groadpg@gmail.com">Ryodo Tanaka</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>choreonoid</depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
